--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   background-blend-mode: darken;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -93,6 +93,9 @@ h2 {
   font-family: 'Times New Roman', Times, serif;
 }
 
+input {
+  color: black;
+}
 .subBtn {
   width: 195px;
   height: 40px;
@@ -141,7 +144,8 @@ h2 {
     transform: rotate(360deg);
   }
 }
-#btn-submit {
+#btn-submit,
+#btn-register {
   width: 100%;
   height: 100%;
   font-weight: bold;
@@ -163,7 +167,12 @@ h2 {
   background-color: #45f3ff;
   color: black;
 }
-
+#btn-register:hover {
+  box-shadow: 0px 0px 5px #45f3ff, 0px 0px 25px #45f3ff, 0px 0px 50px #45f3ff,
+    0px 0px 200px #45f3ff;
+  background-color: #45f3ff;
+  color: black;
+}
 #sginUpPage,
 #loginPage {
   font-weight: bold;
@@ -187,4 +196,13 @@ h2 {
   transition: all 0.3s;
   position: absolute;
   right: -100%;
+}
+
+@media (max-width: 400px) {
+  body {
+    height: fit-content;
+  }
+  .loginContainer {
+    width: 350px;
+  }
 }
