--- a/styleBank.css
+++ b/styleBank.css
@@ -3,10 +3,112 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
+.money {
+  background-color: transparent;
+  border: 1px solid #45f3ff;
+}
+.containerMoney {
+  background-color: transparent;
+  border: 2px solid #45f3ff;
+}
+.subBtn {
+  width: 195px;
+  height: 40px;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+.subBtn::before {
+  content: '';
+  position: absolute;
+  width: 195px;
+  height: 40px;
 
+  top: -50%;
+  left: -50%;
+  background: linear-gradient(60deg, transparent, #45f3ff, #45f3ff);
+  filter: blur(5px);
+  transform-origin: bottom right;
+  z-index: 1;
+
+  animation: animatBtn infinite 2s linear;
+}
+.subBtn::after {
+  content: '';
+  position: absolute;
+  width: 195px;
+  height: 40px;
+
+  top: -50%;
+  right: -50%;
+  background: linear-gradient(60deg, transparent, purple, purple);
+  filter: blur(5px);
+  transform-origin: bottom right;
+  z-index: 1;
+  animation-delay: -1s;
+  animation: animatBtn infinite 2s linear;
+}
+@keyframes animatBtn {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+#depBtn,
+#btn-withdraw {
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
+  line-height: 20px;
+  letter-spacing: 3px;
+  transition: 0.5s;
+  z-index: 2;
+}
+.btnContainer {
+  text-align: center;
+  background-color: black;
+  inset: 2px;
+  z-index: 5;
+  position: absolute;
+}
+#depBtn:hover {
+  box-shadow: 0px 0px 5px #45f3ff, 0px 0px 25px #45f3ff, 0px 0px 50px #45f3ff,
+    0px 0px 200px #45f3ff;
+  background-color: #45f3ff;
+  color: black;
+}
+#btn-withdraw:hover {
+  box-shadow: 0px 0px 5px #45f3ff, 0px 0px 25px #45f3ff, 0px 0px 50px #45f3ff,
+    0px 0px 200px #45f3ff;
+  background-color: #45f3ff;
+  color: black;
+}
+input {
+  outline: none;
+  font-family: 'Times New Roman', Times, serif;
+  letter-spacing: 2px;
+  line-height: 20px;
+  border: 1px solid #45f3ff;
+}
+input::placeholder {
+  color: #45f3ff;
+}
+h2,
+h1 {
+  font-weight: bold;
+  line-height: 20px;
+  letter-spacing: 3px;
+  font-family: 'Times New Roman', Times, serif;
+  color: white;
+}
 @media (max-width: 600px) {
   body {
     height: auto;
