--- a/style.css
+++ b/style.css
@@ -210,7 +210,8 @@ input {
     width: 350px;
   }
 }
-#alertPass {
+#alertPass,
+p {
   color: tomato;
   margin-top: 5px;
   font-family: monospace;
